Convert to GraalVM Native Machine Code for 10-15MB tiny installer